# awsquery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.prod  Makefile  README.md  awsquery.py  compose.yaml  coverage.json  debug-output.txt  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: multistep-validation.yml  quality.yml  release.yml  test.yml
.issues/archive/e1bzl-fix-remaining-15-broken-suffix-entries-surfaced-by-audit/: EXECUTION.md  PLAN.md
.issues/archive/sue5t-fix-tags-default-filters-and-add-additive-column-syntax/: CONTEXT.md  EXECUTION.html  ISSUE.md
.issues/archive/sue5t-fix-tags-default-filters-and-add-additive-column-syntax/research/: codebase.md
.issues/e1bzl-fix-remaining-15-broken-suffix-entries-surfaced-by-audit/: EXECUTION.html  ISSUE.md
.issues/sue5t-fix-tags-default-filters-and-add-additive-column-syntax/: EXECUTION.md  ISSUE.md  PLAN.html  PLAN.md  RESEARCH.html  RESEARCH.md
.issues/sue5t-fix-tags-default-filters-and-add-additive-column-syntax/research/: ecosystem.md  pitfalls.md
docs/: DOCKER.md
scripts/: README.md  audit_default_filters.py  validate-awsquery.sh  validate_multistep_functions.py
src/awsquery/: __init__.py  auto_filters.py  case_utils.py  cli.py  config.py  core.py  default_filters.yaml  filter_validator.py  filters.py  formatters.py  security.py  shapes.py  utils.py
tests/: conftest.py
tests/fixtures/: __init__.py  aws_responses.py  policy_samples.py
tests/integration/: __init__.py  test_autocomplete_resilience.py  test_end_to_end.py  test_feature_combinations.py  test_keys_behavior.py  test_multi_level.py  test_parameter_type_auto_wrapping.py  test_session_management.py  test_shape_aware_integration.py
tests/unit/: __init__.py  test_auto_filters.py  test_case_utils.py  test_cli_arg_processing.py  test_cli_flags.py  test_cli_help_output.py  test_cli_parser.py  test_cli_session_args.py  test_column_ordering.py  test_config_loading.py  test_config_loading_simple.py  test_core.py  test_core_inference.py  test_critical_mutations.py  test_cross_service_hints.py  test_default_column_filters.py  test_filter_implementation.py  test_filter_matching.py  test_filter_validator.py  test_filters.py  test_flag_positioning.py  test_flags_after_separator.py  test_formatter_edge_cases.py  test_formatters.py  test_formatters_data_processing.py  test_input_hint_parameter.py  test_keys_display_fix.py  test_messaging_enhancements.py  test_parameter_option.py  test_parameter_type_validation.py  test_parser_regression.py  test_preemptive_multi_step.py  test_security.py  test_security_edge_cases.py  test_shapes.py  test_tags_transformation.py  test_validate_multistep_readonly_filter.py
